<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:backgroundTint="@android:color/background_dark"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="87dp"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_trophy" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@android:color/background_dark"
        android:paddingLeft="@dimen/dimen_48"
        android:paddingRight="@dimen/dimen_48"
        android:paddingTop="@dimen/dimen_16x"
        android:textColorHint="@color/colorPrimaryDark"
        android:visibility="visible">


    <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/email"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@android:color/background_light"
            android:textCursorDrawable="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@android:color/background_dark"
        android:paddingLeft="@dimen/dimen_48"
        android:paddingRight="@dimen/dimen_48"
        android:paddingTop="@dimen/dimen_16x"
        android:textColorHint="@color/colorPrimaryDark"
        app:passwordToggleEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/password"
            android:password="true"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@android:color/background_light"
            android:textCursorDrawable="@color/colorPrimaryDark" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_64"
        android:layout_marginRight="@dimen/dimen_64"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_32"
        android:text="@string/forgot_password"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_48"
        android:layout_marginRight="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_32"
        android:background="@color/colorPrimary"
        android:text="@string/log_in"
        android:textColor="@android:color/background_light" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/not_a_member_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:background="@android:color/black"
        android:shadowColor="@color/colorAccent"
        android:text="@string/not_a_member_signup"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />

</LinearLayout>
